# VoxelGameEngine

./: .gitignore  CMakeLists.txt  README.md  VoxelEditor.cpp  VoxelGameEngine.cpp  VoxelGameEngine.sln  VoxelGameEngine.vcxproj  VoxelGameEngine.vcxproj.filters  VoxelTester.cpp  basic.frag  block.cpp  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  file_reader.cpp  file_reader.h  glad.c  imgui.ini  material.cpp  material.h  material.hpp  octree.cpp  octree.h  scene_graph.cpp  scene_graph.h  shader.cpp  shader.h  vert_buffer.txt  voxel.h  voxel_object.cpp  voxel_object.h
camera/: CMakeLists.txt  camera.cpp  camera.hpp
chunk/: CMakeLists.txt  block.cpp  block.hpp  chunk.cpp  chunk.hpp
console_log/: console_log.cpp  console_log.hpp
file_handler/: CMakeLists.txt  file_handler.cpp  file_handler.hpp
includes/glad/: glad.h
includes/imgui-1.81/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.h
items/: items.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
material/: CMakeLists.txt  bronze.mat  emerald.mat  jade.mat  material.cpp  material.hpp
object/: CMakeLists.txt  object.cpp  object.hpp
octree/: CMakeLists.txt  brass.mat  material.cpp  material.hpp  octree.cpp  octree.hpp  pearl.mat  ruby.mat
shader/: CMakeLists.txt  basic.frag  basic.vert  shader.cpp  shader.hpp
